Added alternative library for decoding JWTs for android build